# WeDLM-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: IMPLEMENTATION_PLAN.md
profiles/: BASELINE.md
scripts/: generate_parity_fixture.py
src/: cache.rs  config.rs  engine.rs  lib.rs  weights.rs
src/decoding/: mod.rs  reorder.rs  sampler.rs  wedlm.rs
src/model/: attention.rs  backbone.rs  causal_lm.rs  layer.rs  mlp.rs  mod.rs  rope.rs
tests/: invariant_tests.rs  parity_explicit_positions.rs
tests/fixtures/: wedlm_parity_small.json
